--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -120,7 +120,7 @@ input[type=range] {
     -webkit-appearance: none;
     width: 90%; 
     height: 10px;
-    background: linear-gradient(90deg, rgb(16, 213, 194) 0%, rgb(191,191,191) 0%);
+    background: linear-gradient(90deg, rgb(16, 213, 194) 16%, rgb(191,191,191) 0%);
     border-radius: 24px;
     
     
@@ -134,7 +134,7 @@ input[type=range] {
     width: 30px;
     border-radius: 50%;
     background: hsl(174, 86%, 45%);
-    background-image: url("/images/icon-slider.svg");
+    background-image: url("./images/icon-slider.svg");
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
@@ -146,7 +146,7 @@ input[type=range] {
     width: 30px;
     border-radius: 50%;
     background: hsl(174, 86%, 45%);
-    background-image: url("/images/icon-slider.svg");
+    background-image: url("./images/icon-slider.svg");
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
