--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -134,7 +134,7 @@ input[type=range] {
     width: 30px;
     border-radius: 50%;
     background: hsl(174, 86%, 45%);
-    background-image: url("./images/icon-slider.svg");
+    background-image: url("../images/icon-slider.svg");
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
@@ -146,7 +146,7 @@ input[type=range] {
     width: 30px;
     border-radius: 50%;
     background: hsl(174, 86%, 45%);
-    background-image: url("./images/icon-slider.svg");
+    background-image: url("../images/icon-slider.svg");
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
